--- a/target_files/london_to_paris.html
+++ b/target_files/london_to_paris.html
@@ -31,7 +31,29 @@
         </div>
         <div class="item-content">
             <div class="content-container">
-                <p>In September of 2022,  Mary and I cycled from London to Paris. </p>
+                <h1>London to Paris</h1>
+<p>In September of 2022,  Mary and I cycled from London to Paris.</p>
+<h2>Preparation</h2>
+<p>Due to a very busy summer,  we left most of the preparation (such as buying bike panniers) to the day before.  This meant we hadn't had time to try out a lot of equipment and our packing was a bit last minute...  With I expect more luck than judgement it all turned out OK and on the whole we had all the things we needed.</p>
+<h2>Day 1 (Friday)</h2>
+<p>Our first ride with our Panniers was the two miles from our house to York station.  We were a bit weary about being off balanced with the extra weight but we soon got there without incident.</p>
+<p>We caught the 8am train from York down to London. (Straight forward we had booked bikes on the train in advance.)</p>
+<p>Once we got to London we cycled to Trafalgar Square and then walked down the Mall to see people paying their respects to the Queen. Although the offical start is the London Eye, it seemed more fitting that we should start at Buckingham Palace. In hindsight we should have studied the route through London a bit more in advance - but with Mary navigating using Strava on her phone we successfully intercepted the actual route after about 15 minutes without any real trouble.</p>
+<p>As expected the traffic in London was quite heavy and we were both glad when we managed to escape it.  Lunch was from a Spar like shop in Woodmanstene followed by a navigational error - we took the wrong road from the shop.  The next stage was the crossing of the M25 and the hills of the North downs.  I think these are the highest hills on the route!</p>
+<p>After passing Gatwick and Crawley Mary's bike began to make a loud sqeaking noise evertime she peddled.  We both checked her bike and we couldn't see anything wrong.  We tried removing the panniers but the noise still persisted.  The plan was to carry on and hope it fixed its self,  however on the next mile her chain came off.  After putting the chain back on we continued and five minutes later it happened again,  both times after she changed to using her highest gear. After another examination of her bike we spotted that the bolt holding the rack on has come lose and was catching on the chain. At this point we learnt however to remove the back wheels from gravel bikes and then spent ages trying to do the bolt backup.  In the end Mary hit it with the multi-tool and the thread finally caught.</p>
+<p>Back in business, Mary's bike now working better than ever!, we quickly passed East Grinstead and were taken along a cycle track heading East.  With a combination of walking to the Palace and the bike issue meant we were now slightly behind schedule so we decided to continue cycling once it got dark.  After some hilly country lines we stocked up with Coke and Water from a shop in Rotherfield. (We worked out that we could carry 3l of water,  but we weren't sure at this point how much we needed for tea and breakfast).</p>
+<p>After some route finding trouble in the town of Heathfield we decided to start looking for a place to camp.  We were on a cycle track through a wood and spotted a sign for a picnic site about 5 meters from the track - perfect!  We were undistrubed after than some locals who normally used the area as a drinking spot - they didn't seem to too bothered and went somewhere else.  I think I work up everytime someone went down the cycle track and with an early start meant I didn't really get much sleep.</p>
+<h2>Day 2 (Saturday Morning)</h2>
+<p>Up at 4.50am as we had to get to the ferry port before 9am.  The tent was down,  and the bikes loaded in about 20 minutes and we were off.  For breakfast we decided just to have a cereal bar and would have a better breakfast later on.  In hindsight this might of been a mistake as after a couple of hours of cycling we were getting hungry and slowed down. </p>
+<p>Heading due South,  we were almost in Seaford before we saw the sea for the first time.  We then turned along the coast to the port of Newhaven.  This seemed to take ages but I expect it was only 3 miles!</p>
+<p>After a quick debate as to if we should board as passengers or vehicles we correctly picked vehicles. Passport control was quickly passed and then we were searched by customs. They let us decide which bag they should search which I thought was a bit strange.</p>
+<p>All the cyclists had to queue up together,  which was quite social as we chatted about our plans.  One chap was off on a 80 day cycle down to Portugal and a group of six were off to Geneva via Paris.</p>
+<p>Initially we were quite pleased to be first on the ship,  however that meant all the other bikes were placed in front of ours.  This slowed down our exit.  The ship was quite empty and finding seats was easy.  The time was used to have a proper breakfast and too charge as many electrical items as possible.</p>
+<p>Approching Dieppe we noticed that they had a festival,  this was going to be our first port of call!</p>
+<h2>Day 2 (Saturday Afternoon)</h2>
+<p>The afternoon begin with calls of "Ahh it's a roundabout - how do we go around it on the right hand side",  and "This junction is far too scary you go first!"  We soon got the hang of it,  passed a field of very small sheep and then reached Dieppe town centre.  After a walk through their fantasic kite display it was time for our first bit of french shopping. Mary and I then took it turns to stock up on water, cheese and dried bread.</p>
+<p>The plan was only to do about 10 miles that day,  but then we discovered how good the French cycle tracks are.  The one from Dieppe runs along side an old railway line and is very flat and smooth.  The provide facitilies (camping spots, toilets and herb gardens) for the cyclists along the route.  After stopping for Lunch we were passed by the group off to Geneva,  but we soon caught them up again just before they headed off to their hotel for the night!</p>
+<p>The laws regarding wild camping in France seem a bit more relaxed, and we read that you should only camp between 7pm and 9am.  We reached another picnic site,  this time by a car park and road junction.  We used the remaining daylight to cook tea and then put up Mary's tent as it began to get dark.  (I was in a bivi bag).  Once I got used to the barking dogs,  some loud music and the odd car I managed to get a better nights sleep.</p>
 <p><a href="/london_to_paris/index.html">Click here to see our route.</a></p>
 <h2>Kit List</h2>
 <h3>David</h3>
@@ -51,6 +73,8 @@
 <li>Debit card, Credit card, small amount of Euros.  (Contactless worked fine)</li>
 <li>Basic washkit</li>
 <li>Change of clothes for Paris</li>
+<li>Waterproof coat and trousers</li>
+<li>2 x 0.75l Waterbottles</li>
 <li>Book</li>
 <li>Inhaler</li>
 </ul>
@@ -66,6 +90,7 @@
 <li>D-lock, Cable for lock, 2 keys (one each)</li>
 <li>Cycle helmet</li>
 <li>Sunglasses</li>
+<li>2 x 0.75l Waterbottles</li>
 </ul>
 <h3>Shared</h3>
 <ul>
@@ -77,6 +102,7 @@
 <li>USB Solar charger + Shoe Lace (for attaching to bike)</li>
 <li>2 x USB cables for charging lights</li>
 <li>Multi-tool, small pump, 2 x tyre levers, puncture repair kit</li>
+<li>Tape,  chain link tool</li>
 <li>Sun Lotion</li>
 <li>Small first aid kit inc vaseline and paracetamol</li>
 <li>Guide book</li>
@@ -95,6 +121,11 @@
 <li>Yorkshire tea bags (used 3)</li>
 <li>Fruit tea bags (used 3)</li>
 <li>Squash concentrate</li>
+</ul>
+<h3>Things we wished we had</h3>
+<ul>
+<li>A small spanner for the bikes.  (Didn't need it but could have done!)</li>
+<li>A second EU Plug (with USB sockets)</li>
 </ul>
             </div>
         </div>
