--- a/running/index.html
+++ b/running/index.html
@@ -29,6 +29,7 @@
                     <li><input class="route" type="checkbox" value="leedsandliverpoolcanal.xml" data-colour="#ff4000">Liverpool To Leeds Canal Race</input></li>
                     <li><input class="route" type="checkbox" value="Kacr.xml" data-colour="#0000ff">Bristol to London (KACR 2018)</input></li>
                     <li><input class="route" type="checkbox" value="White_Rose_Ultra.xml" data-colour="#ffbf00">White Rose Ultra 100 Miles (Three laps of 30 + a bit)</input></li>
+                    <li><input class="route" type="checkbox" value="White_rose_ultra_2022.gpx" data-colour="#ff4000">White Rose Ultra (2022) New Route</input></li>
                     <li><input class="route" type="checkbox" value="Convergence.xml" data-colour="#00bfff">Convergence (Malton to Hope)</input></li>
                     <li><input class="route" type="checkbox" value="Lyke_Wake_Challenge.xml" data-colour="#00ff40">Lyke Wake Challenge</input></li>
                     <li><input class="route" type="checkbox" value="efm_2017.xml" data-colour="#0040ff">Meriden to Doncaster (Escape From Meriden 2017)</input></li>
@@ -55,10 +56,11 @@
             
                 <div class="sectionHeader"><a target="_blank" href="https://www.transpenninetrail.org.uk/">Trans Pennine Trail</a></div>
                 <ul>
-                    <li><input class="route" type="checkbox" value="Hornsea_to_York_along_the_Trans_Pennine_Trail.xml" data-colour="#ffbf00">Hornsea to York</input></li>
-                    <li><input class="route" type="checkbox" value="York_To_Doncaster.xml" data-colour="#00ffbf">York To Doncaster</input></li>
-                    <li><input class="route" type="checkbox" value="Doncaster_to_Meadowhall_TPT.xml" data-colour="#ff8000">Doncaster to Meadowhall</input></li>                
+                    <li><input class="route" type="checkbox" value="Hornsea_to_York_along_the_Trans_Pennine_Trail.xml" data-colour="#80ff00">Hornsea to York</input></li>
+                    <li><input class="route" type="checkbox" value="York_To_Doncaster.xml" data-colour="#80ff00">York To Doncaster</input></li>
+                    <li><input class="route" type="checkbox" value="Doncaster_to_Meadowhall_TPT.xml" data-colour="#80ff00">Doncaster to Meadowhall</input></li>                
                     <li><input class="route" type="checkbox" value="Barnsley_to_Leeds_along_the_TPT.gpx" data-colour="#80ff00">Barnsley to Leeds</input></li>                
+                    <li><input class="route" type="checkbox" value="Barnsley_to_Stalybridge_along_the_trans_pennine_trail.gpx" data-colour="#80ff00">Barnsley to Stalybridge</input></li>                
                 </ul>
             </div>
         </div>
