--- a/target_files/running.html
+++ b/target_files/running.html
@@ -50,7 +50,8 @@
 <p>In my free time I'm a keen runner and have competed in several ultra-marathons. These include the Winter Spine Race,  the Hardmoors 200 and the Arc of Attrition.</p>
 <p>Most of my runs can be found on <a href="https://www.strava.com/athletes/6352224">Strava</a></p>
 <p>I've been plotting my more interesting (and longer runs) on a <a href="/running/index.html">map.</a></p>
-<p>During the Summer of 2022 I (accidently) entered two 100 mile races a week apart. These were the <a href="/target_files/peak_district_100.html">Peak District 100</a> and <a href="/target_files/south_downs_100.html">South Downs 100</a></p>
+<p>During the Summer of 2022 I (accidentally) entered two 100 mile races a week apart. These were the <a href="/target_files/peak_district_100.html">Peak District 100</a> and <a href="/target_files/south_downs_100.html">South Downs 100</a></p>
+<p>My most recent adventure was a solo fastpack along <a href="/target_files/hadrians_wall.html">Hadrian's Wall</a></p>
             </div>
         </div>
     </div>
