--- a/running/index.html
+++ b/running/index.html
@@ -52,6 +52,7 @@
                     <li><input class="route" type="checkbox" value="Minster_Way.xml" data-colour="#00ff80">Minster Way (Pocklington to York)</input></li>
                     <li><input class="route" type="checkbox" value="WetherbyToYork.xml" data-colour="#0080ff">Wetherby To York (Home from work)</input></li>
                     <li><input class="route" type="checkbox" value="Foss_Way.xml" data-colour="#4000ff">Foss Walk</input></li>
+                    <li><input class="route" type="checkbox" value="Easingwold_to_York_along_cycle_route.gpx" data-colour="#ff4000">Easingwold to York (cycle route)</input></li>
                     <li><input class="route" type="checkbox" value="ebor_way_Ilkley_to_york_section.xml" data-colour="#ff008f">Ebor Way (Ilkley to York section) </input></li>
                     <li><input class="route" type="checkbox" value="Dales_high_way_to_Skipton_and_the_Leeds_Liverpool_canal_back.xml" data-colour="#ff8000">Dales High way to Skipton loop</input></li>
                     <li><input class="route" type="checkbox" value="Harrogate_ringway.gpx" data-colour="#00bfff">Harrogate Ringway (Clockwise)</input></li>
